Fixed editor so it collapses like it used to

--- a/pz-client/src/community-item/community-item-editor.scss
+++ b/pz-client/src/community-item/community-item-editor.scss
@@ -35,6 +35,12 @@
     }
   }
 
+  &.editor-hide-full-body {
+    .editor-area, .editor-footer {
+      display: none;
+    }
+  }
+
   .community-item-content {
     @include editor-content();
   }
